fix: responsive layout on mobile devices

--- a/card-component/index.css
+++ b/card-component/index.css
@@ -100,9 +100,10 @@ h1 {
 
 main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  grid-template-columns: 1fr;
   align-items: flex-start;
   gap: 50px 20px;
+  margin: 0 1rem;
 }
 
 /* CARD */
@@ -190,4 +191,17 @@ main {
 .action-icon:hover {
   background-color: var(--light-gray-background);
   color: black;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (min-width: 750px) {
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  main {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
